2023-XX-XX   2.7.3:
-------------------
  * even though PyPy is not actively supported, allow running tests for
    PyPy 3.7 and 3.8, see also #188
  * add official Python 3.12 support
  * simplify count functionality in util module
  * retire `bitcount_lookup[256]` table
  * improve `util.count_n()` error messages
  * improve testing


2023-02-12   2.7.2:
-------------------
  * speedup all count functionality by using `__builtin_popcountll` when
    available, see #187
  * add `popcount64()` to `bitarray.h` - we assume now that `uint64_t` is
    always available
  * improve testing


2023-02-10   2.7.1:
-------------------
  * optimize `util.sc_encode()`


2023-02-05   2.7.0:
-------------------
  * add `util.sc_encode()` and `util.sc_decode()` for
    [compression of sparse bitarrays](sparse_compression.rst)
  * add `util.any_and()`
  * add `util.intervals()`
  * move functionality of the following utility functions entirely to C:
    `hex2ba()`, `base2ba()`, `deserialize()`, `vl_decode()`, `zeros()`
  * improve error checking for unpickling
  * add [distance metrics](../examples/distance.py) example:
    dice, hamming, jaccard, kulczynski1, rogerstanimoto, russellrao,
    sokalmichener, sokalsneath, yule
  * add example [sparse bitarray](../examples/sparse) implementations


2023-01-01   2.6.2:
-------------------
  * optimize `richcompare()` for opposite endianness
  * improve some docstrings add tests


2022-12-18   2.6.1:
-------------------
  * add documentation on shift operators, #181
  * fix typo in iterable initializer description, #179
  * optimize `richcompare()`


2022-07-19   2.6.0:
-------------------
  * add data descriptions: `.nbytes`, `.padbits`, `.readonly`
  * allow optional `endian` argument to be `None` when creating bitarrays
  * fix type annotation for `canonical_decode()`, #178
  * frozenbitarray's padbits are now guaranteed to be zero
  * add tests


2022-05-10   2.5.1:
-------------------
  * optimize `.reverse()`, see #177