@@ -4669,8 +4669,9 @@ tests.append(TestsFrozenbitarray)
 # ---------------------------------------------------------------------------
 
 def run(verbosity=1, repeat=1):
-    import bitarray.test_util as btu
-    tests.extend(btu.tests)
+    import bitarray.test_util
+    all_tests = list(tests)
+    all_tests.extend(bitarray.test_util.tests)
 
     default_endian = get_default_endian()
     print('bitarray is installed in: %s' % os.path.dirname(__file__))
@@ -4684,7 +4685,7 @@ def run(verbosity=1, repeat=1):
     print('PY_LITTLE_ENDIAN (use word shift): %s' % SYSINFO[7])
     print('DEBUG: %s' % DEBUG)
     suite = unittest.TestSuite()
-    for cls in tests:
+    for cls in all_tests:
         for _ in range(repeat):
             suite.addTest(unittest.makeSuite(cls))
 
