@@ -6,6 +6,8 @@
   * simplify count functionality in util module
   * retire `bitcount_lookup[256]` table
   * improve `util.count_n()` error messages
+  * avoid `util` module tests from being run more than once in each
+    call to `bitarray.test()` when called multiple times
   * improve testing
 
 
